# softComp

./: CMakeLists.txt  main.cpp
widgets/: welcome.cpp  welcome.h
widgets/nn/: perceptron.cpp  perceptron.h
